--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,24 @@
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'application'
-
+plugins {
+	id 'idea'
+	id 'java'
+	id 'application'
+	id 'org.springframework.boot' version '2.0.5.RELEASE'
+}
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
-
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	compile 'org.springframework.boot:spring-boot-dependencies:2.2.4.RELEASE'
 	compile 'org.springframework.boot:spring-boot-starter-web:2.2.4.RELEASE'
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.2.4.RELEASE'
 	testCompile(group: 'junit', name: 'junit', version: '4.12')
 }
-
-mainClassName = 'ru.starovoytov.MainClass'
-
+mainClassName = 'ru.starovoytov.Application'
 jar {
-	archiveBaseName = 'IdService'
-
-	manifest {
-		attributes "Main-Class": mainClassName
-		attributes "Implementation-Version": 0.1
-		attributes "Implementation-Title": project.name
-	}
-
+	dependsOn(bootJar)
+	archiveBaseName = project.name
 	from {
 		configurations.compile.collect {
 			it.isDirectory() ? it : zipTree(it)
@@ -35,5 +26,10 @@ jar {
 		configurations.runtime.collect {
 			it.isDirectory() ? it : zipTree(it)
 		}
+	}
+	exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+}
+bootJar {
+	manifest {
 	}
 }
