--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,20 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-dependencies:2.2.4.RELEASE'
 	compile 'org.springframework.boot:spring-boot-starter-web:2.2.4.RELEASE'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.2.4.RELEASE'
+	components {
+		withModule('org.springframework:spring-beans') {
+			allVariants {
+				withDependencyConstraints {
+					// Need to patch constraints because snakeyaml is an optional dependency
+					it.findAll { it.name == 'snakeyaml' }.each { it.version { strictly '1.19' } }
+				}
+			}
+		}
+	}
 	testCompile(group: 'junit', name: 'junit', version: '4.12')
+}
+test {
+	useJUnitPlatform()
 }
 mainClassName = 'ru.starovoytov.Application'
 jar {
